frontend/lost/src/index.css
html,
body,
#root {
  height: 100%;
  margin: 0;
}

.wrapper {
  display: flex;
  height: 100%;
}

.body {
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
  min-height: 0;
}

body {
  margin: 0;
  font-family:
    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: url('/assets/background.svg');
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

